name:                mvnMods
version:             0.1.0.0
synopsis:            Tool to visualize module structure of maven project
-- description:         
homepage:            https://github.com/jhrcek/haskell-snipets/mvnMods
license:             PublicDomain
license-file:        LICENSE
author:              Jan Hrcek
maintainer:          jhrcek@redhat.com
build-type:          Simple
cabal-version:       >=1.10

executable mvnMods
  main-is:             MvnMods.hs
  other-modules:       Showdot
  ghc-options:         -Wall
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       containers >=0.5 && <0.6,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       hxt >=9.3 && <9.4,
                       process >=1.2 && <1.3,
                       graphviz >= 2999.17
  -- hs-source-dirs:      
  default-language:    Haskell2010
